<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="30dp"
        android:text="@string/intro" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bball"
            android:textAllCaps="false"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/ftball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ftball"
            android:textAllCaps="false"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/sccr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sccr"
            android:textAllCaps="false"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

</LinearLayout>